--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Walker</string>
+    <string name="app_name">Revenge for Chirp</string>
     <string name="level_1">Level 1</string>
     <string name="level_2">Level 2</string>
 </resources>
