--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Walker</string>
+    <string name="points_description">The amount of points the player has and an easy way to get rid of no description warnings.</string>
+    <string name="points">Points:</string>
 </resources>
