--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="points">Points:</string>
     <string name="level_1">Level 1</string>
     <string name="level_2">Level 2</string>
+    <string name="forever">Forever</string>
 </resources>
